[gd_scene load_steps=4 format=3 uid="uid://bn0in381lxfeb"]

[ext_resource type="Script" path="res://Games/assessment/workspace.gd" id="1_vm5ig"]
[ext_resource type="Texture2D" uid="uid://b4a670lt0tvg1" path="res://Assets/Background/Yellow.png" id="2_vx1gl"]
[ext_resource type="Texture2D" uid="uid://dy8y607pjywvd" path="res://Assets/pp_assets/arts/Ball.png" id="3_jae2j"]

[node name="workspace" type="Node2D"]
script = ExtResource("1_vm5ig")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -3
z_as_relative = false
offset_left = -136.0
offset_top = -79.0
offset_right = 1285.0
offset_bottom = 732.0
texture = ExtResource("2_vx1gl")
stretch_mode = 1

[node name="StopButton" type="Button" parent="."]
texture_filter = 1
offset_left = 415.0
offset_top = 593.0
offset_right = 519.0
offset_bottom = 633.0
text = "Calc.  AW"

[node name="set_orgin" type="Button" parent="."]
visible = false
texture_filter = 1
offset_left = 394.0
offset_top = 594.0
offset_right = 485.0
offset_bottom = 633.0
text = "Set orgin
"

[node name="Enter" type="Button" parent="."]
texture_filter = 1
offset_left = 697.0
offset_top = 594.0
offset_right = 788.0
offset_bottom = 633.0
text = "Enter"

[node name="start" type="Button" parent="."]
texture_filter = 1
offset_left = 568.0
offset_top = 593.0
offset_right = 642.0
offset_bottom = 633.0
text = "Start"

[node name="Clear" type="Button" parent="."]
texture_filter = 1
offset_left = 1066.0
offset_top = 594.0
offset_right = 1140.0
offset_bottom = 634.0
text = "Clear"

[node name="Reset" type="Button" parent="."]
texture_filter = 1
offset_left = 15.0
offset_top = 594.0
offset_right = 105.0
offset_bottom = 634.0
text = "Set-Zero"

[node name="SelectGame" type="Button" parent="."]
offset_left = 1079.0
offset_top = 16.0
offset_right = 1129.0
offset_bottom = 48.0
text = "Game
"

[node name="Lines" type="Node2D" parent="."]

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(603, 489)
scale = Vector2(0.533334, 0.533334)
texture = ExtResource("3_jae2j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 952.0
offset_top = 86.0
offset_right = 1142.0
offset_bottom = 244.0

[node name="AW" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Active workspace (AW)"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "X Dir"

[node name="axval" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0.0"

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "cm"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Z Dir"

[node name="azval" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0.0"

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "cm"

[node name="TW" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Training workspace (TW)"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "X Dir"

[node name="txval" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0.0"

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "cm"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Z Dir"

[node name="tzval" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0.0"

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "cm"

[connection signal="pressed" from="StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="set_orgin" to="." method="_on_set_orgin_pressed"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="SelectGame" to="." method="_on_select_game_pressed"]
